--- a/face-detection/build.gradle
+++ b/face-detection/build.gradle
@@ -13,8 +13,6 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -41,20 +39,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation project(path: ':core')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.0.0'
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
     // CameraX core library using camera2 implementation
+    //noinspection GradleDependency
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle Library
+    //noinspection GradleDependency
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
 
+    //noinspection GradleDependency
     implementation "androidx.camera:camera-view:$camerax_version"
 }
 
