--- a/face-detection/build.gradle
+++ b/face-detection/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
+    // implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
+    implementation 'com.google.mlkit:face-detection:16.1.5'
     // CameraX core library using camera2 implementation
     //noinspection GradleDependency
     implementation "androidx.camera:camera-camera2:$camerax_version"
